# tmp_unirender_cycles_ci

./: CMakeLists.txt  README.md
.github/workflows/: build-linux-ci.yml  build-windows-ci.yml  pragma-linux-ci.yml
cycles_interface/: CMakeLists.txt
cycles_interface/include/: icycles.hpp
cycles_interface/src/: icycles.cpp
github_actions/build_cycles/: action.yml
include/unirender/cycles/: baking.hpp  ccl_shader.hpp  cycles_interface.hpp  display_driver.hpp  renderer.hpp  renderer_bak.hpp
src/: baking.cpp  ccl_shader.cpp  cycles_interface.cpp  cycles_renderer.cpp  cycles_renderer2.cpp  cycles_xml.cpp  display_driver.cpp  mikk_tangent_space.cpp  renderer.cpp  standalone_test.cpp
